--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
-          <div class="sidebar-nav">
+          <div class="sidebar-nav backRound">
             <ul class="nav nav-list">
               <li class="active">
                 <a href="#">
