--- a/cv.html
+++ b/cv.html
@@ -1,70 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-	<link href="assets/css/perso.css" rel="stylesheet">
-    <style>
-    
-    </style>
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-      </script>
-    <![endif]-->
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-    <style>
-      undefined
-    </style>
-  </head>
-  
-  <body>
+<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>CV - Jo's Page</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 30px;
+                padding-bottom: 40px;
+            }
+        </style>
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+		
+		<link rel="shortcut icon" href="favicon.ico">
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+		
 	<div class="page-header">
-		<h1><a href="index.html">Jo's page.</a></h1>
+		<h1><a href="index.html">Jo's page<div style="color:#3399CC;display:inline;">.</div></a></h1>
 	</div>
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
-          <div class="sidebar-nav backRound">
-            <ul class="nav nav-list">
-              <li class="">
-                <a href="index.html">
-				<i class="icon-home"></i>
-                  Home
-                </a>
-              </li>
-              <li class="">
-                <a href="projects.html">
-				<i class="icon-folder-open"></i>
-                  Projects
-                </a>
-              </li>
-              <li class="active">
-                <a href="#">
-				<i class="icon-briefcase"></i>
-                  CV
-                </a>
-              </li>
-              <li class="">
-                <a href="contact.html">
-				<i class="icon-pencil"></i>
-                  Contact
-                </a>
-              </li>
-            </ul>
-          </div>
+			<div class="leftPanel" data-spy="affix" data-offset-top="100">
+			  <div class="backRound colored">
+				<ul class="nav nav-list">
+				  <li class="">
+					<a href="index.html">
+					<i class="icon-home"></i>
+					  Home
+					</a>
+				  </li>
+				  <li class="">
+					<a href="projects.html">
+					<i class="icon-folder-open"></i>
+					  Projects
+					</a>
+				  </li>
+				  <li class="active">
+					<a href="#">
+					<i class="icon-briefcase icon-white"></i>
+					  CV
+					</a>
+				  </li>
+				  <li class="">
+					<a href="contact.html">
+					<i class="icon-pencil"></i>
+					  Contact
+					</a>
+				  </li>
+				</ul>
+			  </div>
+			  <div class="center">
+				  <div style="display: inline-block;" class="logo backRound colored">
+					  <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
+						<img alt="Linkedin" src="img/github-logo-s.png">
+					  </a>
+				  </div>
+				  <div style="display: inline-block;" class="logo backRound colored">
+					  <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
+						<img alt="GitHub" src="img/linkedin-logo-s.png">
+					  </a>
+				  </div>
+			  </div>
+			</div>
         </div>
         <div class="span10 content CVSpan">
 				<h2>Curriculum Vitae</h2>
@@ -227,15 +239,25 @@
 					</tr>
 				</table>
           
-				<p class="page-bottom"><small>© Jonàs Brú Monserrat 2012 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a></small></p>
+				<p class="page-bottom">
+					<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> & <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
+				</p>
         </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
-    </script>
-    <script src="assets/js/bootstrap.js">
-    </script>
-  </body>
+	
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script src="js/main.js"></script>
+
+        <script>
+            var _gaq=[['_setAccount','UA-35637631-1'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
+    </body>
 </html>
-
