--- a/projects.html
+++ b/projects.html
@@ -249,10 +249,18 @@
 						</a>
 					</div>
 				</div>
-				<p>Haskell implementation of the <a target="_blank" href="">game of life</a>, by .. Final project from a Chalmers functionnal programming course.</p>
-				<p>-GOL description-</p>
-				<p>An user interface permits to see the evolution of the pattern (zoom/dezoom, change the simulation speed, etc). The script can read and load RLE files, RLE being the most common game of life patterns files. You can fin a lot of interesting patterns (and spend a lot of time playing with them) in the <a target="_blank" href="">.. wiki</a>.</p>
-				<p>Developped with Michael Fagno. Code <a target="_blank" href="">here</a>.</p>
+				<p>Haskell implementation of the <a target="_blank" href="http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life</a>. Final project from a Chalmers functionnal programming course.</p>
+				<p>The "game" is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the Game of Life by creating an initial configuration and observing how it evolves.</p>
+				<p>The universe of the Game of Life is an infinite two-dimensional orthogonal grid of square cells, each of which is in one of two possible states, alive or dead. Every cell interacts with its eight neighbours, which are the cells that are horizontally, vertically, or diagonally adjacent. At each step in time, the following transitions occur:
+					<ol>
+					    <li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li>
+					    <li>Any live cell with two or three live neighbours lives on to the next generation.</li>
+					    <li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li>
+					    <li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
+					</ol>
+				</p>
+				<p>An user interface permits to see the evolution of the pattern (zoom/dezoom, change the simulation speed, etc). The script can read and load RLE files, RLE being the most common game of life patterns files. You can fin a lot of interesting patterns (and spend a lot of time playing with them) on the <a target="_blank" href="http://www.conwaylife.com/wiki/Main_Page">LifeWiki</a>.</p>
+				<p>Developped with Michael Fagno. Code <a target="_blank" href="https://github.com/jonasbru/FunctionalProg">here</a>.</p>
 			</div>
 			<div id="Ascension" class="span12 backRound">
 				<h2 class="h2Projects">Ascension</h2><span class="badge">Java</span><span class="badge">Slick</span>
