home page stuff

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 			<p><i class="icon-envelope"></i> Email me at : <b>jonas.bru.monserrat[at]gmail[dot]com</b></p>
 	  
 			<p class="page-bottom">
-					<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> & <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
+					<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
 				</p>
         </div>
       </div>
