--- a/index.html
+++ b/index.html
@@ -83,10 +83,42 @@
 				<h2>Hi !</h2>
 				<p>I'm Jonàs, currently student of <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweeden), that lasted a semester.</p>
 				<p><b>I am currently looking for an internship for a duration of 6 months, starting in March 2013, in the USA, in the San Francisco area if possible.</b></p>
+				<br/>
+
+				<div class="span6 content center">
+					<h4>stuff I'm good at</h4>
+					<div>
+						<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+						<span class="badge badge4">C</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+						<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
+						 <span class="badge badge5">UML</span> <span class="badge badge5">MERISE</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+					</div>
+					<br/>
+					<a href="cv.html" class="a_no_style">
+						<p style="text-align: center;">Take a look to the CV page for more !</p>
+					</a>
+				</div>
+
+				<div class="span6 content">
+					<h4 class="center">stuff I like <small>or I would like to do</small></h4>
+					<ul>
+						<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
+						<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
+						<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
+						<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
+						<li><strong>Skydiving</strong>. That must be awesome</li>
+					</ul>
+					<a href="projects.html" class="a_no_style">
+						<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
+					</a>
+				</div>
           
-				<p class="page-bottom">
-					<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> & <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
-				</p>
+
+				<div class="span12 ">
+					<p class="page-bottom">
+						<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
+					</p>
+				</div>
         </div>
       </div>
 
