--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
 		<link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+    	<div class="whole_page">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -259,5 +260,6 @@
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
+        </div>
     </body>
 </html>
