--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 		<link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+    	<div class="whole_page">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 		
-		<div class="page-header">
+	<div class="page-header">
 		<h1><a href="index.html">Jo's page<div style="color:#3399CC;display:inline;">.</div></a></h1>
 	</div>
     <div class="container-fluid">
@@ -85,33 +86,36 @@
 				<p><b>I am currently looking for an internship for a duration of 6 months, starting in March 2013, in the USA, in the San Francisco area if possible.</b></p>
 				<br/>
 
-				<div class="span6 content center">
-					<h4>stuff I'm good at</h4>
-					<div>
-						<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-						<span class="badge badge4">C</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
-						<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-						 <span class="badge badge5">UML</span> <span class="badge badge5">MERISE</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+				<table class="row-fluid"><tr><td>
+					<div class="span6 content center">
+						<h4>stuff I'm good at</h4>
+						<div>
+							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+							<span class="badge badge4">C</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
+							 <span class="badge badge5">UML</span> <span class="badge badge5">MERISE</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+						</div>
+						<br/>
+						<a href="cv.html" class="a_no_style">
+							<p style="text-align: center;">Take a look to the CV page for more !</p>
+						</a>
 					</div>
-					<br/>
-					<a href="cv.html" class="a_no_style">
-						<p style="text-align: center;">Take a look to the CV page for more !</p>
-					</a>
-				</div>
 
-				<div class="span6 content">
-					<h4 class="center">stuff I like <small>or I would like to do</small></h4>
-					<ul>
-						<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
-						<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
-						<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
-						<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
-						<li><strong>Skydiving</strong>. That must be awesome</li>
-					</ul>
-					<a href="projects.html" class="a_no_style">
-						<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
-					</a>
-				</div>
+					<div class="span6 content">
+						<h4 class="center">stuff I like <small> or I would like to do</small></h4>
+						<ul>
+							<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
+							<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
+							<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
+							<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
+							<li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
+							<li style="display:none"><strong>Details</strong> and hidden things ;)</li>
+						</ul>
+						<a href="projects.html" class="a_no_style">
+							<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
+						</a>
+					</div>
+				</td></tr></table>
           
 
 				<div class="span12 ">
@@ -137,6 +141,7 @@
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
+        </div>
     </body>
 </html>
 
