--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,7 @@
 		<![endif]-->
     </head>
     <body data-spy="scroll" data-target="#navbar" data-offset="80">
+    	<div class="whole_page">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -332,5 +333,6 @@
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
+    </div>
     </body>
 </html>
