--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
 							<span class="badge badge4">C</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
 							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-							 <span class="badge badge5">UML</span> <span class="badge badge5">MERISE</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+							 <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
 						</div>
 						<br/>
 						<a href="cv.html" class="a_no_style">
