--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
         </div>
         <div class="span10 content">
 			<h2>Projects</h2>
-			<p>Here are some interesting projects I've participated in these last few years. I tried, wherever possible, to put a link to the code as well as some screenshots. If you want to know more about a project, please feel free to send me an email !</p>
+			<p>Here are some interesting projects I've participated in these last few years. I tried, wherever possible, to put a link to the code as well as some screenshots (you can clic on the images). If you want to know more about a project, please feel free to send me an email !</p>
 			<br/>
 			<div id="ZenInstants" class="span12 backRound">
 				<h2 class="h2Projects">Zen Instants</h2><span class="badge">Android</span><span class="badge">Java</span><span class="badge">PHP</span>
