--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
 				<h2>Hi !</h2>
 				<p>I'm Jonàs, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
-				<p><b>I am currently looking for an internship for a duration of 6 months, starting in March 2013, in the USA, in the San Francisco area if possible.</b></p>
+				<p><b>I am currently looking for an internship for a duration of 6 months, starting in March 2013, in the USA or Canada.</b></p>
 				<br/>
 
 				<table class="row-fluid"><tr><td>
