added taxi links

--- a/projects.html
+++ b/projects.html
@@ -234,6 +234,7 @@
 				<p>A UTBM professor came one day to me with a particular subject which needed the help of a student. The subject being very interesting, I accepted the offer.</p>
 				<p>The city of Paris wanted to conduct a study on the viability of electric taxis in the French capital, including the placement of recharging stations for the taxis. We had at our disposal a file containing the GPS coordinates of all taxis in Paris at any time of the day for a period of one week (needless to say that the file was huge), as well as the information if the taxi was occupied or empty. The goal was to find the points of the city where the greatest number of empty taxis circulated in order to install charging stations at these locations.</p>
 				<p>The program was developed in Flash (requirement of the professor), and shows the movements of the taxis during the day over a map of Paris. Different views modes, filters, as well as the ability to track a taxi in particular have also been implemented. The project was interesting by the type of data handled, as well as its volume, that should be well managed in order to not slow the application.</p>
+				<p>Code <a target="_blank" href="https://github.com/jonasbru/TaxiManager">here</a>, try it <a target="_blank" href="http://jonasbru.github.com/TaxiManager/">here</a>!</p>
 			</div>
 			<div id="Gameoflife" class="span12 backRound">
 				<h2 class="h2Projects">Game of life</h2><span class="badge">Haskell</span>
@@ -253,13 +254,13 @@
 				<p>Haskell implementation of the <a target="_blank" href="http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life</a>. Final project from a Chalmers functionnal programming course.</p>
 				<p>The "game" is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the Game of Life by creating an initial configuration and observing how it evolves.</p>
 				<p>The universe of the Game of Life is an infinite two-dimensional orthogonal grid of square cells, each of which is in one of two possible states, alive or dead. Every cell interacts with its eight neighbours, which are the cells that are horizontally, vertically, or diagonally adjacent. At each step in time, the following transitions occur:
-					<ol>
-					    <li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li>
-					    <li>Any live cell with two or three live neighbours lives on to the next generation.</li>
-					    <li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li>
-					    <li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
-					</ol>
 				</p>
+				<ol>
+				    <li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li>
+				    <li>Any live cell with two or three live neighbours lives on to the next generation.</li>
+				    <li>Any live cell with more than three live neighbours dies, as if by overcrowding.</li>
+				    <li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
+				</ol>
 				<p>An user interface permits to see the evolution of the pattern (zoom/dezoom, change the simulation speed, etc). The script can read and load RLE files, RLE being the most common game of life patterns files. You can fin a lot of interesting patterns (and spend a lot of time playing with them) on the <a target="_blank" href="http://www.conwaylife.com/wiki/Main_Page">LifeWiki</a>.</p>
 				<p>Developped with Michael Fagno. Code <a target="_blank" href="https://github.com/jonasbru/FunctionalProg">here</a>.</p>
 			</div>
