--- a/projects.html
+++ b/projects.html
@@ -111,6 +111,9 @@
 					<a href="#Ascension">Ascension</a>
 				  </li>
 				  <li class="">
+					<a href="#NanoBlood">NanoBlood</a>
+				  </li>
+				  <li class="">
 					<a href="#CofityHome">Cofity Home</a>
 				  </li>
 				</ul>
@@ -303,6 +306,38 @@
 				<p>Ascension is a vertical scrolling game that takes place in a cartoon world ranging from depths of hell to the cloudy heaven, where characters from all backgrounds fight for a place in a better life. They have, in order to be admitted into the paradise, a power that allows them to repel their closer enemies in an attempt to make them fall into the flames of hell. It is skillfully jumping from platform to platform while pushing its competitors that players come to be accepted in heaven.</p>
 				<p>The game can be played up to 4 players; however, everything happens on the same keyboard. You can find a video of the gameplay <a target="_blank" href="http://www.youtube.com/watch?v=HVweItpfMuY">here</a> (the four players are played by the same person), or <a target="_blank" href="http://www.youtube.com/watch?v=f8WVxSoRD2Q">here</a> a video with four real players ('bit messy..).</p>
 				<p>Developped with Michael Fagno, Anis Benyoub &amp; Florent Weillaert. Desing by <a target="_blank" href="http://lamachinefactory.com/">Damien Reynaud</a> &amp; Delphine Rousseau. Code <a target="_blank" href="https://github.com/jonasbru/ProjetX">here</a>.</p>
+			</div>
+			<div id="NanoBlood" class="span12 backRound">
+				<h2 class="h2Projects">NanoBlood</h2><span class="badge">Java</span><span class="badge">Slick</span>
+				<div class="highslide-gallery">
+					<a id="thumb7" href="img/projects/nanoblood1.jpg" class="highslide" 
+							onclick="return hs.expand(this, config7 )">
+						<img src="img/projects/nanoblood.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					</a>
+					
+					<div class="hidden-container">
+						<a href="img/projects/nanoblood2.jpg" class="highslide" 
+								onclick="return hs.expand(this, config7 )">
+							<img src="img/projects/nanoblood2.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/nanoblood3.jpg" class="highslide" 
+								onclick="return hs.expand(this, config7 )">
+							<img src="img/projects/nanoblood3.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/nanoblood4.jpg" class="highslide" 
+								onclick="return hs.expand(this, config7 )">
+							<img src="img/projects/nanoblood4.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/nanoblood5.jpg" class="highslide" 
+								onclick="return hs.expand(this, config7 )">
+							<img src="img/projects/nanoblood5.jpg"  alt=""/>
+						</a>
+					</div>
+				</div>
+				<p>Game developed during a Global GameJam, I was participating in Lyon, at the <a target="_blank" href="http://www.bellecour.fr/">Bellecour Ecoles</a> locals. Same concept as Ascension, we had 48 hours to build a team and create a game on a specific topic here a heart beats. Our team was composed of 3 developers + 3 graphic designers + 1 game designer.</p>
+				<p>NanoBlood is a 2D side scroller where you must aim for the highest score. You control a nano vessel that moves inside human blood vessels. At the beginning of the GameJam, the purpose of the game was to cure the patient you're inside, and for that you needed to destroy "bad" cells (like cancer cells, viruses, etc), while collecting bonuses, like a shield, life, etc. Buuut, I don't know really why, we ended with a game where you could destroy everything, "bad" and "good" cells, shooting lasers everywhere (yeah lasers, inside the blood vessels yep). But it was fun !!</p>
+				<p>Oh, at the end (yes because you will die at some point), you discover that you were inside Batman, and you just killed him. Yep. (did I said that it seemed fun back then?)</p>
+				<p>Developped with Théo Dubourg, Johan Nagy, William Burke, Bertrand Degalbert, Anthony Nemoff, P.G Chouzy. You can find the project page <a target="_blank" href="http://globalgamejam.org/2013/nanoblood">here</a>. Code <a target="_blank" href="https://github.com/jonasbru/nanoblood">here</a>.</p>
 			</div>
 			<div id="CofityHome" class="span12 backRound">
 				<h2 class="h2Projects">Cofity Home</h2><span class="badge">Domotic</span><span class="badge">C</span><span class="badge">Flex</span><span class="badge">Bison</span><span class="badge">JSON</span>
