--- a/projects.html
+++ b/projects.html
@@ -114,6 +114,9 @@
 					<a href="#NanoBlood">NanoBlood</a>
 				  </li>
 				  <li class="">
+					<a href="#DeepInTheLight">DeepInTheLight</a>
+				  </li>
+				  <li class="">
 					<a href="#CofityHome">Cofity Home</a>
 				  </li>
 				</ul>
@@ -339,6 +342,15 @@
 				<p>Oh, at the end (yes because you will die at some point), you discover that you were inside Batman, and you just killed him. Yep. (did I said that it seemed fun back then?)</p>
 				<p>Developped with Théo Dubourg, Johan Nagy, William Burke, Bertrand Degalbert, Anthony Nemoff, P.G Chouzy. You can find the project page <a target="_blank" href="http://globalgamejam.org/2013/nanoblood">here</a>. Code <a target="_blank" href="https://github.com/jonasbru/nanoblood">here</a>.</p>
 			</div>
+			
+			<div id="DeepInTheLight" class="span12 backRound">
+				<h2 class="h2Projects">DeepInTheLight</h2><span class="badge">Java</span><span class="badge">Slick</span>
+				
+				<p>Game developed in a Game Rush held at INSA (again), where we had 24 hours to create a game on a specific topic (here Cartoon). This time, our team was composed of 4 developers, a graphic designer and a sound designer.</p>
+				<p>In Deep in the Light you control a deep-sea fish (an Anglerfish to be precise), and all the light in the environment that surrounds you is the light that you produce, so you have a limited field of view. Moreover, the reach of you light decreases over time, and you need to eat other little glowing fishes to expand your light radius again. That means that, at some points, you can have a really tiny field of vision, and not being able to see the obstacles or enemies that surround you. We wanted to produce a dark and stressful ambiance for this game, and the music helped in there too, because the less you can see, the stressful the music becomes.</p>
+				<p>Developed with Michael Fagno, Raphael Catolino, Kevin, Stanislas, Anthony. Code <a target="_blank" href="https://github.com/DeepInTheLight/DeepInTheLight">here</a>.</p>
+			</div>
+			
 			<div id="CofityHome" class="span12 backRound">
 				<h2 class="h2Projects">Cofity Home</h2><span class="badge">Domotic</span><span class="badge">C</span><span class="badge">Flex</span><span class="badge">Bison</span><span class="badge">JSON</span>
 				<p>Domotic server highly configurable, collects information from various sensors and triggers actuators automatically according to rules written by the user. Incorporates a web server that allows the user to monitor the sensors, trigger the actuators, and change the rules of the server. Adding additional sensors and actuators is simplified to the maximum, and it is only a matter of minutes to add a new one. We used EnOcean sensors, but any bran can be used.</p>
