images + familly names to deepInTheLight

--- a/projects.html
+++ b/projects.html
@@ -345,10 +345,42 @@
 			
 			<div id="DeepInTheLight" class="span12 backRound">
 				<h2 class="h2Projects">DeepInTheLight</h2><span class="badge">Java</span><span class="badge">Slick</span>
-				
+				<div class="highslide-gallery">
+					<a id="thumb8" href="img/projects/DeepInTheLight1.jpg" class="highslide" 
+							onclick="return hs.expand(this, config8 )">
+						<img src="img/projects/DeepInTheLight.thumb.jpg" class="img-polaroid img-project" alt=""/>
+					</a>
+					
+					<div class="hidden-container">
+						<a href="img/projects/DeepInTheLight2.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight2.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/DeepInTheLight3.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight3.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/DeepInTheLight4.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight4.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/DeepInTheLight5.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight5.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/DeepInTheLight6.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight6.jpg"  alt=""/>
+						</a>
+						<a href="img/projects/DeepInTheLight7.jpg" class="highslide" 
+								onclick="return hs.expand(this, config8 )">
+							<img src="img/projects/DeepInTheLight7.jpg"  alt=""/>
+						</a>
+					</div>
+				</div>
 				<p>Game developed in a Game Rush held at INSA (again), where we had 24 hours to create a game on a specific topic (here Cartoon). This time, our team was composed of 4 developers, a graphic designer and a sound designer.</p>
 				<p>In Deep in the Light you control a deep-sea fish (an Anglerfish to be precise), and all the light in the environment that surrounds you is the light that you produce, so you have a limited field of view. Moreover, the reach of you light decreases over time, and you need to eat other little glowing fishes to expand your light radius again. That means that, at some points, you can have a really tiny field of vision, and not being able to see the obstacles or enemies that surround you. We wanted to produce a dark and stressful ambiance for this game, and the music helped in there too, because the less you can see, the stressful the music becomes.</p>
-				<p>Developed with Michael Fagno, Raphael Catolino, Kevin, Stanislas, Anthony. Code <a target="_blank" href="https://github.com/DeepInTheLight/DeepInTheLight">here</a>.</p>
+				<p>Developed with Michael Fagno, Raphaël Catolino, Kévin Le Gouguec, Stanislas Bernatt, Anthony Clerc. Code <a target="_blank" href="https://github.com/DeepInTheLight/DeepInTheLight">here</a>.</p>
 			</div>
 			
 			<div id="CofityHome" class="span12 backRound">
