--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<h4>stuff I'm good at</h4>
 						<div>
 							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-							<span class="badge badge4">C</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+							<span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
 							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
 							 <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
 						</div>
