bitbucket link + news zone

--- a/index.html
+++ b/index.html
@@ -68,61 +68,72 @@
 			  <div class="center">
 				  <div style="display: inline-block;" class="logo backRound colored">
 					  <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
-						<img alt="Linkedin" src="img/github-logo-s.png">
+						  <img alt="Linkedin" src="img/github-logo-s.png">
 					  </a>
 				  </div>
-				  <div style="display: inline-block;" class="logo backRound colored">
-					  <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
-						<img alt="GitHub" src="img/linkedin-logo-s.png">
-					  </a>
-				  </div>
+          <div style="display: inline-block;" class="logo backRound colored">
+            <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
+              <img alt="Linkedin" src="img/linkedin-logo-s.png">
+            </a>
+          </div>
+          <div style="display: inline-block;" class="logo backRound colored">
+            <a title="Bitbucket" target="_blank" href="https://bitbucket.org/lenwe">
+              <img alt="Bitbucket" src="img/bitbucket-logo-s.png">
+            </a>
+          </div>
 			  </div>
 			</div>
         </div>
         <div class="span10 content">
-				<img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
-				<h2>Hi !</h2>
-				<p>I'm Jonàs, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
-				<p>I am currently doing an internship in an awesome company, <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam.</p>
-				<br/>
+  				<img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
+  				<h2>Hi !</h2>
+  				<p>I'm Jonàs, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
+  				<p>I am currently doing an internship in an awesome company, <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam.</p>
+  				<br/>
 
-				<table class="row-fluid"><tr><td>
-					<div class="span6 content center">
-						<h4>stuff I'm good at</h4>
-						<div>
-							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-							<span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
-							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-							 <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
-						</div>
-						<br/>
-						<a href="cv.html" class="a_no_style">
-							<p style="text-align: center;">Take a look to the CV page for more !</p>
-						</a>
-					</div>
+  				<table class="row-fluid"><tr><td>
+  					<div class="span6 content center">
+  						<h4>stuff I'm good at</h4>
+  						<div>
+  							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+  							<span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+  							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
+  							 <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+  						</div>
+  						<br/>
+  						<a href="cv.html" class="a_no_style">
+  							<p style="text-align: center;">Take a look to the CV page for more !</p>
+  						</a>
+  					</div>
 
-					<div class="span6 content">
-						<h4 class="center">stuff I like <small> or I would like to do</small></h4>
-						<ul>
-							<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
-							<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
-							<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
-							<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
-							<li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
-							<li style="display:none"><strong>Details</strong> and hidden things ;)</li>
-						</ul>
-						<a href="projects.html" class="a_no_style">
-							<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
-						</a>
-					</div>
-				</td></tr></table>
+  					<div class="span6 content">
+  						<h4 class="center">stuff I like <small> or I would like to do</small></h4>
+  						<ul>
+  							<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
+  							<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
+  							<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
+  							<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
+  							<li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
+  							<li style="display:none"><strong>Details</strong> and hidden things ;)</li>
+  						</ul>
+  						<a href="projects.html" class="a_no_style">
+  							<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
+  						</a>
+  					</div>
+  				</td></tr></table>
           
+          <div class="span12 ">
+            <h4>News</h4>
+            <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
+            <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/">Cod'INSA</a> :)</p>
+            <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
+          </div>
 
-				<div class="span12 ">
-					<p class="page-bottom">
-						<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
-					</p>
-				</div>
+  				<div class="span12 ">
+  					<p class="page-bottom">
+  						<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
+  					</p>
+  				</div>
         </div>
       </div>
 
