--- a/projects.html
+++ b/projects.html
@@ -73,17 +73,22 @@
 				</ul>
 			  </div>
 			  <div class="center">
-				  <div style="display: inline-block;" class="logo backRound colored">
-					  <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
-						<img alt="Linkedin" src="img/github-logo-s.png">
-					  </a>
-				  </div>
-				  <div style="display: inline-block;" class="logo backRound colored">
-					  <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
-						<img alt="GitHub" src="img/linkedin-logo-s.png">
-					  </a>
-				  </div>
-			  </div>
+                  <div style="display: inline-block;" class="logo backRound colored">
+                   <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
+                    <img alt="Linkedin" src="img/github-logo-s.png">
+                  </a>
+                </div>
+                <div style="display: inline-block;" class="logo backRound colored">
+                  <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
+                    <img alt="Linkedin" src="img/linkedin-logo-s.png">
+                  </a>
+                </div>
+                <div style="display: inline-block;" class="logo backRound colored">
+                  <a title="Bitbucket" target="_blank" href="https://bitbucket.org/lenwe">
+                    <img alt="Bitbucket" src="img/bitbucket-logo-s.png">
+                  </a>
+                </div>
+              </div>
 			  <div id="navbar" class="backRound colored">
 				<ul class="nav nav-list sidebar-nav">
 				  <li class="active">
