--- a/index.html
+++ b/index.html
@@ -1,158 +1,51 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Home - Jo's Page</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 30px;
-                padding-bottom: 40px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-		
-		<link rel="shortcut icon" href="favicon.ico">
-    </head>
-    <body>
-    	<div class="whole_page">
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-		
-	<div class="page-header">
-		<h1><a href="index.html">Jo's page<div style="color:#3399CC;display:inline;">.</div></a></h1>
-	</div>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span2">
-			<div class="leftPanel" data-spy="affix" data-offset-top="100">
-			  <div class="backRound colored">
-				<ul class="nav nav-list">
-				  <li class="active">
-					<a href="#">
-					<i class="icon-home icon-white"></i>
-					  Home
-					</a>
-				  </li>
-				  <li class="">
-					<a href="projects.html">
-					<i class="icon-folder-open"></i>
-					  Projects
-					</a>
-				  </li>
-				  <li class="">
-					<a href="cv.html">
-					<i class="icon-briefcase"></i>
-					  CV
-					</a>
-				  </li>
-				  <li class="">
-					<a href="contact.html">
-					<i class="icon-pencil"></i>
-					  Contact
-					</a>
-				  </li>
-				</ul>
-			  </div>
-			  <div class="center">
-				  <div style="display: inline-block;" class="logo backRound colored">
-					  <a title="GitHub" target="_blank" href="https://github.com/jonasbru">
-						  <img alt="Linkedin" src="img/github-logo-s.png">
-					  </a>
-				  </div>
-          <div style="display: inline-block;" class="logo backRound colored">
-            <a title="Linkedin" target="_blank" href="http://www.linkedin.com/in/jonasbru/en">
-              <img alt="Linkedin" src="img/linkedin-logo-s.png">
-            </a>
-          </div>
-          <div style="display: inline-block;" class="logo backRound colored">
-            <a title="Bitbucket" target="_blank" href="https://bitbucket.org/lenwe">
-              <img alt="Bitbucket" src="img/bitbucket-logo-s.png">
-            </a>
-          </div>
-			  </div>
-			</div>
-        </div>
-        <div class="span10 content">
-  				<img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
-  				<h2>Hi !</h2>
-  				<p>I'm Jonàs, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
-  				<p>I am currently doing an internship in an awesome company, <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam.</p>
-  				<br/>
-
-  				<table class="row-fluid"><tr><td>
-  					<div class="span6 content center">
-  						<h4>stuff I'm good at</h4>
-  						<div>
-  							<span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-  							<span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
-  							<span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-  							 <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
-  						</div>
-  						<br/>
-  						<a href="cv.html" class="a_no_style">
-  							<p style="text-align: center;">Take a look to the CV page for more !</p>
-  						</a>
-  					</div>
-
-  					<div class="span6 content">
-  						<h4 class="center">stuff I like <small> or I would like to do</small></h4>
-  						<ul>
-  							<li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
-  							<li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
-  							<li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
-  							<li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
-  							<li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
-  							<li style="display:none"><strong>Details</strong> and hidden things ;)</li>
-  						</ul>
-  						<a href="projects.html" class="a_no_style">
-  							<p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
-  						</a>
-  					</div>
-  				</td></tr></table>
-          
-          <div class="span12 ">
-            <h4>News</h4>
-            <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
-            <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/">Cod'INSA</a> :)</p>
-            <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
-          </div>
-
-  				<div class="span12 ">
-  					<p class="page-bottom">
-  						<small>© Jonàs Brú Monserrat 2013 | Powered by <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a> &amp; <a href="http://www.initializr.com/" target="_blank">Initializr</a></small>
-  					</p>
-  				</div>
-        </div>
-      </div>
-
-        </div> <!-- /container -->
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-
-        <script src="js/vendor/bootstrap.min.js"></script>
-
-        <script src="js/main.js"></script>
-
-        <script>
-            var _gaq=[['_setAccount','UA-35637631-1'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-        </div>
-    </body>
-</html>
-
+---
+layout: default
+title: Jo's page
+nav: home
+---
+<div class="span10 content">
+   <img src="img/profil_small.jpg" alt="profile picture" id="profilePic" class="img-polaroid"/>
+   <h2>Hi !</h2>
+   <p>I'm Jonàs Bru, currently a student in my <b>5<sup>th</sup> year</b> at <a href="http://www.insa-lyon.fr/en"><abbr title="Institut National des Sciences Appliquées">INSA</abbr> Lyon</a> (France) in <b>computer science</b>. I have just returned from an Erasmus exchange program at <a href="http://www.chalmers.se/en/">Chalmers University</a> (Göteborg, Sweden), that lasted a semester.</p>
+   <p>I am currently doing an internship in an awesome company, <a href="http://www.atlassian.com/">Atlassian</a>, in Amsterdam.</p>
+   <br/>
+   <table class="row-fluid">
+      <tr>
+         <td>
+            <div class="span6 content center">
+               <h4>stuff I'm good at</h4>
+               <div>
+                  <span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+                  <span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+                  <span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
+                  <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+               </div>
+               <br/>
+               <a href="cv.html" class="a_no_style">
+                  <p style="text-align: center;">Take a look to the CV page for more !</p>
+               </a>
+            </div>
+            <div class="span6 content">
+               <h4 class="center">stuff I like <small> or I would like to do</small></h4>
+               <ul>
+                  <li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
+                  <li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
+                  <li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
+                  <li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
+                  <li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
+                  <li style="display:none"><strong>Details</strong> and hidden things ;)</li>
+               </ul>
+               <a href="projects.html" class="a_no_style">
+                  <p style="text-align: center;">Take a look to the Projects page to know what kind of stuff I do !</p>
+               </a>
+            </div>
+         </td>
+      </tr>
+   </table>
+   <div class="span12 ">
+      <h4>News</h4>
+      <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content</p>
+      <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
+      <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/">Cod'INSA</a> :)</p>
+      <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
+   </div>
