small fixes jekyll

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
-      <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content</p>
+      <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
       <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
       <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/">Cod'INSA</a> :)</p>
       <p><strong>25 February 2013</strong> - Added a project page for the Paris Taxi Flow project, you can test it <a href="http://jonasbru.github.io/TaxiManager/">here</a> (in Flash). May take some time to load, be patient.</p>
