Atlassian internship added, and some skills modifications

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@ nav: home
             <div class="span6 content center">
                <h4>stuff I'm good at</h4>
                <div>
-                  <span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">Spring Security</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
-                  <span class="badge badge3">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <span class="badge badge5">Bootstrap</span> <br/>
+                  <span class="badge badge5">Java</span> <span class="badge badge5">Spring Batch</span> <span class="badge badge5">C#</span> <span class="badge badge4">Android</span> <br/> 
+                  <span class="badge badge4">Python</span> <span class="badge badge5">C++</span> <span class="badge badge5">Qt</span> <br/>
+                  <span class="badge badge4">Javascript</span> <span class="badge badge5">Bootstrap</span> <span class="badge badge3">Backbone</span> <br/>
                   <span class="badge badge4">Haskell</span> <span class="badge badge3">Erlang</span> <br/>
-                  <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge4">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
+                  <span class="badge badge5">UML</span> <span class="badge badge5">Agile methodology</span> <span class="badge badge5">Git</span> <span class="badge badge4">Algorithms</span> <span class="badge badge5">Metaheuristics</span> 
                </div>
                <br/>
                <a href="cv.html" class="a_no_style">
@@ -30,9 +31,9 @@ nav: home
                <ul>
                   <li><strong>Traveling</strong>; mostly by train, discover new ways of thinking..</li>
                   <li><strong>Good music</strong>; in the bus, while working, etc ! <a href="http://www.lastfm.fr/user/FougereJo">My LastFM profile</a></li>
-                  <li><strong>Human contact</strong>. Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
-                  <li><strong>Serrano ham</strong>. I want to be buried with a box of serrano ham</li>
-                  <li><strong>Skydiving</strong>. Never tried, but that must be awesome</li>
+                  <li><strong>Human contact</strong>; Well, I'm not talking about that kind of contact.. more like community involvement :)</li>
+                  <li><strong>Serrano ham</strong>; I want to be buried with a box of serrano ham</li>
+                  <li><strong>Skydiving</strong>; Never tried, but that must be awesome</li>
                   <li style="display:none"><strong>Details</strong> and hidden things ;)</li>
                </ul>
                <a href="projects.html" class="a_no_style">
@@ -44,6 +45,7 @@ nav: home
    </table>
    <div class="span12 ">
       <h4>News</h4>
+      <p><strong>1 September 2013</strong> - Description of my awesome internship at <a href="https://www.atlassian.com/">Atlassian</a> added!</p>
       <p><strong>31 August 2013</strong> - The site uses now <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> to render its content.</p>
       <p><strong>25 April 2013</strong> - Added this news section and a link to my bitbucket profile.</p>
       <p><strong>21 April 2013</strong> - Now I know some Python! Thanks <a href="http://codinsa.insa-lyon.fr/">Cod'INSA</a> :)</p>
